# gpgme-glib

./: Makefile.am  gpgme-glib.m4  meson.build  meson_options.txt
gpgme-glib/: gpgme-glib-ctx.h  gpgme-glib-data.h  gpgme-glib.c  meson.build
